--- a/src/app/sidebar/side-bar.component.html
+++ b/src/app/sidebar/side-bar.component.html
@@ -46,12 +46,7 @@
                     </li>
                     <li>
                         <div>
-                            <a [routerLink]="['/employees/pa/dev']" routerLinkActive="active-link">Build/Dev</a>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <a [routerLink]="['/employees/pa/qa']" routerLinkActive="active-link">Build/QA</a>
+                            <a [routerLink]="['/employees/pa/build']" routerLinkActive="active-link">Build</a>
                         </div>
                     </li>
                     <li>
