--- a/src/app/sidebar/side-bar.component.html
+++ b/src/app/sidebar/side-bar.component.html
@@ -41,17 +41,17 @@
                 <ul class="sub-menu" [ngClass]="isOpenPractice ? 'sub-menu-open' : ''">
                     <li>
                         <div>
-                            <a [routerLink]="['/employees/pa/Design']" routerLinkActive="active-link">Design</a>
+                            <a [routerLink]="['/practice-area/Design']" routerLinkActive="active-link">Design</a>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <a [routerLink]="['/employees/pa/build']" routerLinkActive="active-link">Build</a>
+                            <a [routerLink]="['/practice-area/build']" routerLinkActive="active-link">Build</a>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <a [routerLink]="['/employees/pa/Deliver']" routerLinkActive="active-link">Deliver</a>
+                            <a [routerLink]="['/practice-area/Deliver']" routerLinkActive="active-link">Deliver</a>
                         </div>
                     </li>
                 </ul>
