add account mgr to header for client pages

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,6 +8,12 @@
   }
 }
 
+
+.border-left-ingage-purple {
+  border-left: 0.25rem solid #714885 !important;
+  }
+
+
 /*
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
