eliminate spinner for login, and associated local storage item.

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,19 +1,28 @@
 <div class="container-login">
   <div class="wrap-login">
-    <div style="padding-bottom: 55px;"><img src="assets/images/Ingage_logo_no_BG.png" style="width: 100%;" /></div>
+    <div style="padding-bottom: 55px">
+      <img src="assets/images/Ingage_logo_no_BG.png" style="width: 100%" />
+    </div>
 
-    <ngx-spinner type="ball-clip-rotate-multiple" size="medium">
+    <!-- <ngx-spinner type="ball-clip-rotate-multiple" size="medium">
       <p class="loading">{{ loadingMessage }}</p>
-    </ngx-spinner>
+    </ngx-spinner> -->
 
     <div class="container-login-form-btn">
-      <button class="login-form-btn" (click)="login()" *ngIf="!this.loginService.isLoggedIn">
+      <button
+        class="login-form-btn"
+        (click)="login()"
+        *ngIf="!this.loginService.isLoggedIn"
+      >
         Login
       </button>
-      <button class="login-form-btn" (click)="logout()" *ngIf="this.loginService.isLoggedIn">
+      <button
+        class="login-form-btn"
+        (click)="logout()"
+        *ngIf="this.loginService.isLoggedIn"
+      >
         Logout
       </button>
     </div>
-
   </div>
 </div>
